<resources>
    <string name="app_name">Myompta</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="Add_New">Ajouter</string>
    <string name="edit">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="title_activity_display">Depenses</string>
    <string name="disignation">Desig.</string>
    <string name="montant">Montant</string>
    <string name="beneficiaire">Bénef.</string>
    <string name="dateOp">Date</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="enregistrer">ENREGISTRER</string>
    <string name="supDepence">Vous étes sur!?.</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="list_by_design">Par designation</string>
    <string name="list_by_date">Par dates</string>


</resources>
