<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DisplayContact" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextDesignation"
            android:layout_alignParentLeft="true"
            android:text="@string/disignation"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/editTextDesignation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="82dp"
            android:ems="10"
            android:inputType="text" >
        </EditText>
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextMontant"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/montant"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/editTextMontant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextBeneficiaire"
            android:layout_below="@+id/editTextDesignation"
            android:ems="10"
            android:inputType="phone|text" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextDateOp"
            android:layout_alignLeft="@+id/textView5"
            android:text="@string/beneficiaire"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <EditText
            android:id="@+id/editTextBeneficiaire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextDesignation"
            android:layout_below="@+id/editTextMontant"
            android:ems="10"
            android:inputType="text" >

        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateOp"
            android:id="@+id/textView3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignBottom="@+id/editTextDateOp"
            android:layout_alignParentStart="true" />
        <EditText
            android:id="@+id/editTextDateOp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:layout_below="@+id/editTextBeneficiaire"
            android:layout_alignStart="@+id/editTextBeneficiaire" />


        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="run"
            android:text="@string/enregistrer"
            android:layout_below="@+id/editTextDateOp"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</ScrollView>

